# search_server

./: .gitmodules  README.md
project/: CMakeLists.txt
project/config/: answers.json  config.json  requests.json
project/include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
project/src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
project/tests/: example_test.cpp  index_tests.cpp  server_tests.cpp
